test/errors/importee-deps-not-array-literal/hook.jsx
import { useEffect } from "react";
/**
 * @__IMPORTABLE_HOOK__
 */

export default function useTestHook() {
  const a = [];
  useEffect(() => {}, a);
}
